lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__stream_text_happy_path_events.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "text_start",
    "text_id": "[UUID]"
  },
  {
    "type": "text_delta",
    "delta": "Hel",
    "text_id": "[UUID]"
  },
  {
    "type": "text_delta",
    "delta": "lo",
    "text_id": "[UUID]"
  },
  {
    "type": "text_end",
    "text_id": "[UUID]"
  },
  {
    "type": "finish",
    "finish_reason": "stop",
    "usage": {
      "input_tokens": 11,
      "output_tokens": 5,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "[UUID]",
      "model": "gemini-test",
      "provider": "gemini",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "text",
            "data": "Hello"
          }
        ]
      },
      "finish_reason": "stop",
      "usage": {
        "input_tokens": 11,
        "output_tokens": 5,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": null,
      "warnings": [],
      "rate_limit": null
    }
  }
]
