lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__system_and_tools_decode.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "id": "[UUID]",
  "model": "gemini-test",
  "provider": "gemini",
  "message": {
    "role": "assistant",
    "content": [
      {
        "kind": "text",
        "data": "Hello back"
      }
    ]
  },
  "finish_reason": "stop",
  "usage": {
    "input_tokens": 32,
    "output_tokens": 7,
    "reasoning_tokens": 0,
    "cache_read_tokens": 10,
    "cache_write_tokens": 0
  },
  "raw": {
    "candidates": [
      {
        "content": {
          "role": "model",
          "parts": [
            {
              "text": "Hello back"
            }
          ]
        },
        "finishReason": "STOP"
      }
    ],
    "usageMetadata": {
      "promptTokenCount": 42,
      "candidatesTokenCount": 7,
      "cachedContentTokenCount": 10
    }
  },
  "warnings": [],
  "rate_limit": null
}
