lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__system_and_tools_encode.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/models/gemini-test:generateContent",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "425"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "x-goog-api-key",
      "test-key"
    ]
  ],
  "body": {
    "contents": [
      {
        "role": "user",
        "parts": [
          {
            "text": "Hello"
          }
        ]
      }
    ],
    "systemInstruction": {
      "parts": [
        {
          "text": "Be concise"
        }
      ]
    },
    "generationConfig": {
      "temperature": 0.5,
      "maxOutputTokens": 128
    },
    "tools": [
      {
        "functionDeclarations": [
          {
            "name": "search",
            "description": "Search files",
            "parameters": {
              "type": "object",
              "properties": {
                "query": {
                  "type": "string"
                }
              }
            }
          }
        ]
      }
    ],
    "safety_settings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  }
}
